# Tongue-Ai-Agent

./: .gitignore  PRESENTATION.md  README.md  docker-compose.yml
backend/: main.py
backend/agents/: agent.py
backend/config/: prompts.py  settings.py
backend/utils/: input_guard.py  memory_manager.py  vision_loader.py
backend/vision_predict/: tongue_analysis_pipeline.py  ukan_archs.py
electron-tongue/: README.md  electron-builder.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
electron-tongue/scripts/: dev.bat  dev.sh  postinstall.cjs
electron-tongue/src/api/: api.ts  speech.ts
electron-tongue/src/electron/: main.ts  preload.ts  tsconfig.json
electron-tongue/src/types/: electron.d.ts
electron-tongue/src/ui/: App.tsx  index.css
electron-tongue/src/ui/components/: weekly-report-modal.tsx
electron-tongue/src/ui/components/camera-modal/: camera-modal.tsx
fastapi-service/: .env.example  README.md  database.py  main-old.py  main.py  pyproject.toml  routes.py  test_memory.py  test_short_term_memory.py  tools.py
fastapi-service/agents/: __init__.py  agent.py
fastapi-service/config/: __init__.py  models.py  prompts.py  scoring.py  settings.py
fastapi-service/utils/: __init__.py  error_handler.py  file_handler.py  memory_manager.py  streaming.py  vision_loader.py
frontend/src/api/: api.ts
frontend/src/config/: api-config.ts
frontend/src/ui/components/: weekly-report-modal.tsx
vision-predict/: model.py  readme.md  requirements.txt  tongue_analysis_pipeline.py
(+1 files in other folders)
