[project]
name = "fastapi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-core>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "pydantic>=2.12.4",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
    # vision-predict 依賴項
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "Pillow>=9.0.0",
    "numpy>=1.21.0",
    "pydantic-settings>=2.12.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.45",
]
